les fonctionnalités de base with swagger et postgresql et oui avec les DTO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=ProxiBanque_Achraf_chawki
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/proxibanque_db
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update  # update / create-drop / validate / none
+
+server.port=8080
+
